# projektinzynieriaoprogramowania

./: CMakeLists.txt  Projekt v 1.3.1.uml  Przedmiot.cpp  Przedmiot.h  Student.cpp  Student.h  System.cpp  System.h  Test.cpp  Test.h  Uzytkownik.cpp  Uzytkownik.h  Wykladowca.cpp  Wykladowca.h  main.cpp  przedmioty.txt  tematy.txt  testy.txt  uzytkownicy.txt  zapisy.txt
Testy/: TestyMain.cpp  UzytkownikTest.cpp
output/: przedmioty.txt  tematy.txt  testy.txt  uzytkownicy.txt  zapisy.txt
